# LAB_OS_2_numbers

./: CMakeLists.txt
LAB_OS_2_numbers/: CMakeLists.txt  LAB_OS_2_numbers.cpp  LAB_OS_2_numbers.h
tests/: CMakeLists.txt  test_min_max.cpp
